# lightgrep

./: .gitignore  Cargo.toml  README.md  output.txt
benches/: file_directory_regex_bench.rs  highlight_file_directory_regex_bench.rs  large_file_literal_bench.rs  large_quantity_of_files_bench.rs  single_file_literal_bench.rs  single_file_regex_match_bench.rs
src/: lib.rs  main.rs  types.rs  utils.rs
